# ostinato

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: lint-test-docs.yml  test-package-publish.yml
scripts/: main.py  proofs.py  score_viewer.py
src/ostinato/: hashtec.py  music_parser.py  music_utils.py  siatec.py  utils.py
src/ostinato/music_elements/: __init__.py  measure.py  melody.py  part.py  score.py  tonality.py  utils.py
tests/: conftest.py  test_siatec.py
