[project]
name = "ostinato"
version = "0.0.1"
authors = [{ name = "Paul Hein", email = "paul.d.hein@gmail.com" }]
description = "A package for finding repeated patterns in polyphonic music"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pauldhein/ostinato"
"Bug Tracker" = "https://github.com/pauldhein/ostinato/issues"

[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
